# doc_extractor

./: .coverage  .gitignore  README.md  REFACTORING_NOTES.md  flake.nix  out-image-0-Im1.tiff  pypdf_extractor.py  pyproject.toml  pytest.ini  test.py  tmp  todo.md
.hypothesis/constants/: 031fe350771aff11  1977e14f807db192  2a5912eaace1ecc6  5587a2368e4213e2  5bd434a8675a9b32  6170d1ff1fb5d624  abed1b3a53b93535  c5764054a5312e95  ca862407988daff5  cb62ba5e98c40484  d15911752f369411  f159d1b20b6479cb
bu/: __init__.py  claims_align.py  claims_diff.py  claims_parse.py  config.py  excerpts.py  extract_figures.py  extract_text.py  main.py  models.py  runner.py  segment.py  utils_normalize.py  utils_subprocess.py
bu/reimpl/: extract.py  front.py  front_new.py  pypdf_extractor.py
butests/integration/: conftest.py  test_golden_front_pages.py
butests/unit/: test_application_number.py  test_citation.py  test_dates.py  test_front_matter_end_to_end.py  test_inid_parse_blocks.py
corpus/: US7629993B2.front.json
corpus/gold/: US10107621B2.front.json  US10935501B2.front.json  US10937705B2.front.json  US11346768B1.front.json  US7629993B2.front.json  US9587932B2.drawings.json  US9587932B2.front.json
docs/: BUNDLE_API.md
examples/: bundle_api_usage.py
patent_ingest/: __main__.py  drawing_sheets.py  drawing_sheets.py.bu  ingest.py  parse_front_page.py  parse_front_page.py.bu  pipeline.py
patent_ingest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
patent_ingest_bu/: __init__.py  claims_diff.py  claims_parse.py  cli.py  config.py  excerpts.py  extract_text.py  runner.py  utils_subprocess.py
src/doc_extractor/: __main__.py  api.py  bundle.py  load.py  pipeline.py  structured_logger.py
src/patent_ingest/: __main__.py  api.py  assembler.py  bundle.py  claims.py  diagnostics.py  drawing_sheets.py  load.py  logging.py  parse_body.py  parse_front_page.py  parsed.py  patent_id.py  pipeline.py  structured_logger.py  two_column.py  two_column.py.bu  two_column.py.bub  utils.py
src/patent_ingest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: README.md  assertions.py  assertions.py.bu  conftest.py  helpers.py  normalise.py  test_api.py  test_body_patterns.py  test_diagnostics.py  test_front_page_single.py  test_golden_drawing_sheets.py  test_golden_front_pages.py  test_integration_pipeline.py  token_extractors.py  us_parse_pub.py
tests/integration/: test_analyse_parameterised.py  test_analyse_us_10107621B2.py  test_analyse_us_10935501B2.py  test_analyse_us_7629993B2.py  test_analyse_us_9587932B2.py  test_analyse_uspo_20110054659.py  test_front_page_single.py  test_golden_drawing_sheets.py  test_golden_drawing_sheets.py.bu  test_golden_front_pages.py
tests/unit/: conftest.py  fixtures.py  test_abstract_counts.py  test_assembler.py  test_assignee.py  test_assignee_parsing.py  test_classify.py  test_count_meta_parsing.py  test_helpers.py  test_inventors.py  test_patent_body_claims_extraction.py  test_patent_body_drawing_desc.py  test_patent_body_figures_compatibility.py  test_patent_id.py  (+9 more)
tools/: run_corpus.py
(+100 files in other folders)
