[project]
name = "patent_ingest"
version = "0.1.0"
description = "Patent PDF parsing (front matter, drawings, body)"
requires-python = ">=3.10"
dependencies = ["pypdf"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
patent-ingest = "patent_ingest.__main__:main"

[tool.setuptools.package-data]
"patent_ingest" = ["schemas/*.json"]
