[project]
name = "patent_ingest"
version = "0.1.0"
description = "Patent PDF parsing (front matter, drawings, body)"
requires-python = ">=3.10"
dependencies = [
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "pypdf",
    "structlog>=24.1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
patent-ingest = "patent_ingest.__main__:main"

[tool.setuptools.package-data]
"patent_ingest" = ["schemas/*.json"]
