[project]
name = "doc_extractor"
version = "0.1.0"
description = "Patent PDF parsing (front matter, drawings, body)"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.13.0.90",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.9",
    "pypdf",
    "scikit-learn>=1.7.2",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[project.scripts]
patent-ingest = "patent_ingest.__main__:main"

[tool.setuptools.package-data]
"doc_extractor" = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
    # Coverage options (requires pytest-cov to be installed)
    # "--cov=src/patent_ingest",
    # "--cov-report=term-missing",
    # "--cov-report=html:htmlcov",
    # "--cov-report=json:coverage.json",
    # "--cov-branch",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require test files)",
    "slow: Slow tests (e.g., full pipeline runs)",
]

[tool.coverage.run]
source = ["src/doc_extractor"]
omit = ["*/tests/*", "*/__pycache__/*", "*/test_*.py"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[dependency-groups]
dev = ["hypothesis>=6.151.4"]
